[workspace]
members = ["presage", "presage-cli", "presage-store-sled"]

[patch.crates-io]
curve25519-dalek = { git = 'https://github.com/signalapp/curve25519-dalek', rev = "4f0aa6653c51598daa0a2f53b8ba54ce0eedfbdd" }

[patch."https://github.com/whisperfish/libsignal-service-rs.git"]
libsignal-service = { path = "../libsignal-service-rs/libsignal-service" }
libsignal-service-hyper = { path = "../libsignal-service-rs/libsignal-service-hyper" }
[patch."https://github.com/signalapp/libsignal"]
libsignal-protocol = { path = "../libsignal/rust/protocol" }
zkgroup = { path = "../libsignal/rust/zkgroup" }